@@ -16,43 +16,44 @@
 
 package org.bremersee.common.model;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
+import java.util.List;
+import org.assertj.core.api.SoftAssertions;
+import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 /**
  * The access control entry modifications test.
  *
  * @author Christian Bremer
  */
+@ExtendWith(SoftAssertionsExtension.class)
 class AccessControlEntryModificationsTest {
 
   /**
    * Gets permission.
+   *
+   * @param softly the soft assertions
    */
   @Test
-  void getPermission() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    ace.setPermission("read");
-    assertEquals("read", ace.getPermission());
+  void getPermission(SoftAssertions softly) {
+    softly
+        .assertThat(AccessControlEntryModifications.builder()
+            .permission("read")
+            .build()
+            .getPermission())
+        .isEqualTo("read");
 
-    ace = AccessControlEntryModifications.builder()
-        .permission("write")
-        .build();
-    assertEquals("write", ace.getPermission());
-
-    assertNotEquals(ace, null);
-    assertNotEquals(ace, new Object());
-    assertEquals(ace, ace);
-    assertEquals(ace, ace.toBuilder().permission("write").build());
-
-    assertTrue(ace.toString().contains("write"));
+    softly
+        .assertThat(AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .build()
+            .getPermission())
+        .isEqualTo("write");
   }
 
   /**
@@ -60,22 +61,15 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getGuest() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    ace.setGuest(Boolean.TRUE);
-    assertEquals(Boolean.TRUE, ace.getGuest());
-    ace.setGuest(Boolean.FALSE);
-    assertEquals(Boolean.FALSE, ace.getGuest());
-    ace.setGuest(null);
-    assertEquals(Boolean.FALSE, ace.getGuest());
-
-    ace = AccessControlEntryModifications.builder()
-        .guest(Boolean.TRUE)
-        .build();
-    assertEquals(Boolean.TRUE, ace.getGuest());
-
-    assertEquals(ace, ace.toBuilder().guest(Boolean.TRUE).build());
-
-    assertTrue(ace.toString().contains("true"));
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .isGuest(true)
+            .build()
+            .isGuest())
+        .isTrue();
   }
 
   /**
@@ -83,25 +77,16 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getAddUsers() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getAddUsers());
-    ace.setAddUsers(Collections.singletonList("value"));
-    assertNotNull(ace.getAddUsers());
-    assertFalse(ace.getAddUsers().isEmpty());
-    assertEquals("value", ace.getAddUsers().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .addUsers(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getAddUsers());
-    assertFalse(ace.getAddUsers().isEmpty());
-    assertEquals("value", ace.getAddUsers().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().addUsers(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .addUsers(expected)
+            .build()
+            .getAddUsers())
+        .containsExactlyElementsOf(expected);
   }
 
   /**
@@ -109,25 +94,16 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getRemoveUsers() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getRemoveUsers());
-    ace.setRemoveUsers(Collections.singletonList("value"));
-    assertNotNull(ace.getRemoveUsers());
-    assertFalse(ace.getRemoveUsers().isEmpty());
-    assertEquals("value", ace.getRemoveUsers().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .removeUsers(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getRemoveUsers());
-    assertFalse(ace.getRemoveUsers().isEmpty());
-    assertEquals("value", ace.getRemoveUsers().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().removeUsers(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .removeUsers(expected)
+            .build()
+            .getRemoveUsers())
+        .containsExactlyElementsOf(expected);
   }
 
   /**
@@ -135,25 +111,16 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getAddRoles() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getAddRoles());
-    ace.setAddRoles(Collections.singletonList("value"));
-    assertNotNull(ace.getAddRoles());
-    assertFalse(ace.getAddRoles().isEmpty());
-    assertEquals("value", ace.getAddRoles().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .addRoles(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getAddRoles());
-    assertFalse(ace.getAddRoles().isEmpty());
-    assertEquals("value", ace.getAddRoles().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().addRoles(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .addRoles(expected)
+            .build()
+            .getAddRoles())
+        .containsExactlyElementsOf(expected);
   }
 
   /**
@@ -161,25 +128,16 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getRemoveRoles() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getRemoveRoles());
-    ace.setRemoveRoles(Collections.singletonList("value"));
-    assertNotNull(ace.getRemoveRoles());
-    assertFalse(ace.getRemoveRoles().isEmpty());
-    assertEquals("value", ace.getRemoveRoles().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .removeRoles(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getRemoveRoles());
-    assertFalse(ace.getRemoveRoles().isEmpty());
-    assertEquals("value", ace.getRemoveRoles().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().removeRoles(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .removeRoles(expected)
+            .build()
+            .getRemoveRoles())
+        .containsExactlyElementsOf(expected);
   }
 
   /**
@@ -187,25 +145,16 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getAddGroups() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getAddGroups());
-    ace.setAddGroups(Collections.singletonList("value"));
-    assertNotNull(ace.getAddGroups());
-    assertFalse(ace.getAddGroups().isEmpty());
-    assertEquals("value", ace.getAddGroups().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .addGroups(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getAddGroups());
-    assertFalse(ace.getAddGroups().isEmpty());
-    assertEquals("value", ace.getAddGroups().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().addGroups(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .addGroups(expected)
+            .build()
+            .getAddGroups())
+        .containsExactlyElementsOf(expected);
   }
 
   /**
@@ -213,24 +162,15 @@ class AccessControlEntryModificationsTest {
    */
   @Test
   void getRemoveGroups() {
-    AccessControlEntryModifications ace = new AccessControlEntryModifications();
-    assertNull(ace.getRemoveGroups());
-    ace.setRemoveGroups(Collections.singletonList("value"));
-    assertNotNull(ace.getRemoveGroups());
-    assertFalse(ace.getRemoveGroups().isEmpty());
-    assertEquals("value", ace.getRemoveGroups().get(0));
-
-    ace = AccessControlEntryModifications.builder()
-        .removeGroups(Collections.singletonList("value"))
-        .build();
-    assertNotNull(ace.getRemoveGroups());
-    assertFalse(ace.getRemoveGroups().isEmpty());
-    assertEquals("value", ace.getRemoveGroups().get(0));
-
-    assertEquals(
-        ace,
-        ace.toBuilder().removeGroups(Collections.singletonList("value")).build());
-
-    assertTrue(ace.toString().contains("value"));
+    List<String> expected = List.of("a", "b", "c");
+    assertThat(
+        AccessControlEntryModifications
+            .from(AccessControlEntry.builder()
+                .permission("write")
+                .build())
+            .removeGroups(expected)
+            .build()
+            .getRemoveGroups())
+        .containsExactlyElementsOf(expected);
   }
 }
