@@ -16,13 +16,9 @@
 
 package org.bremersee.common.model;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -37,20 +33,12 @@ class AccessControlListTest {
    */
   @Test
   void getOwner() {
-    AccessControlList model = new AccessControlList();
-    assertNull(model.getOwner());
-    model.setOwner("value");
-    assertEquals("value", model.getOwner());
-
-    model = AccessControlList.builder().owner("value").build();
-    assertEquals("value", model.getOwner());
-
-    assertNotEquals(model, null);
-    assertNotEquals(model, new Object());
-    assertEquals(model, model);
-    assertEquals(model, model.toBuilder().owner("value").build());
-
-    assertTrue(model.toString().contains("value"));
+    assertThat(
+        AccessControlList.builder()
+            .owner("someone")
+            .build()
+            .getOwner())
+        .isEqualTo("someone");
   }
 
   /**
@@ -58,24 +46,18 @@ class AccessControlListTest {
    */
   @Test
   void getEntries() {
-    AccessControlList model = new AccessControlList();
-    assertNotNull(model.getEntries());
-    assertTrue(model.getEntries().isEmpty());
-
-    AccessControlEntry ace = AccessControlEntry.builder()
-        .permission("read")
-        .guest(Boolean.TRUE)
-        .build();
-    model.setEntries(Collections.singletonList(ace));
-    assertEquals(ace, model.getEntries().get(0));
-
-    model = AccessControlList.builder()
-        .entries(Collections.singletonList(ace))
-        .build();
-    assertEquals(ace, model.getEntries().get(0));
-
-    assertEquals(model, model.toBuilder().entries(Collections.singletonList(ace)).build());
-
-    assertTrue(model.toString().contains(ace.toString()));
+    List<AccessControlEntry> expected = List.of(
+        AccessControlEntry.builder()
+            .permission("read")
+            .roles(List.of("ROLE_USER"))
+            .build()
+    );
+    assertThat(
+        AccessControlList.builder()
+            .owner("someone")
+            .entries(expected)
+            .build()
+            .getEntries())
+        .containsExactlyElementsOf(expected);
   }
 }
